feat: swagger now retrieve addr and port
