# docs/swagger.yaml
@@ -200,6 +200,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/users.indexResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
